--- a/index.html
+++ b/index.html
@@ -1,32 +1,93 @@
 <!-- index.html -->
+
 <!DOCTYPE html>
-<html lang="en">
+<html>
+<title>Brendan Grady - Home</title>
+
 <head>
-    <meta charset="UTF-8">
+<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Welcome to my personal website! Explore my world, my hobbies, and my passions.">
     <title>Home - My Personal Website</title>
 </head>
 <body>
-    <header>
-        <h1>Welcome to My Personal Website</h1>
-        <nav>
-            <a href="index.html">Home</a> |
-            <a href="about/index.html">About Me</a> |
-            <a href="contact/index.html">Contact</a> |
-            <a href="projects/index.html">Projects</a> |
-            <a href="gallery/index.html">Gallery</a>
-        </nav>
-    </header>
-    <main>
-        <section>
-            <h2>Discover My World</h2>
-            <p>Hi! I'm excited to share my journey, skills, and interests with you. Explore my pages to learn more!</p>
-            <img src="images/home_image.jpg" alt="A welcoming image representing the theme of my site">
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2025 My Personal Website</p>
-    </footer>
+    <table border="1" width="100%" cellpadding="10">
+        <tr>
+            <td width="10%" bgcolor="#d3d3d3">
+                <nav>
+                    <h3>Navigation</h3>
+                    <table border="1" cellpadding="5" bgcolor="#f0f8ff">
+                        <tr>
+                            <td><a href="index.html"> Home </a> </td>
+                        </tr>
+                        <tr>
+                            <td><a href="about/index.html"> About Me</a></td>
+                        </tr>
+                        <tr>
+                            <td><a href="contact/index.html"> Contact</a></td>
+                        </tr>
+                        <tr>
+                            <td><a href="projects/index.html"> Projects</a></td>
+                        </tr>
+                        <tr>
+                            <td><a href="gallery/index.html"> Gallery</a></td>
+                        </tr>
+                    </table>
+                </nav>
+            </td>
+            <td width="80%">
+                <header>
+                    <h1 style="text-align: center; background-color: #4682b4; color: white;">Welcome to My Personal Website</h1>
+                </header>
+
+                <!-- Page Content -->
+                <div id="main">
+                    <!-- Header/Home -->
+                    <header id="home">
+                        <h1><span>Hello, I'm</span> Brendan Grady</h1>
+                        <p>Student at the University of Denver</p>
+                    </header>
+
+                    <h1>
+                        <img src="" alt="me" width="300">
+                    </h1>
+
+                    <div id="myself">
+                        <hr>
+                        <p>
+                            Hi, I am Brendan Grady. I am from Massachusetts.
+                        </p>
+                        <table border="1" align="center" cellpadding="10" width="50%" bgcolor="#f0fff0">
+                            <tr>
+                                <th>Skill</th>
+                                <th>Level</th>
+                            </tr>
+                            <tr>
+                                <td>HTML</td>
+                                <td>Intermediate</td>
+                            </tr>
+                            <tr>
+                                <td>CSS</td>
+                                <td>Beginner</td>
+                            </tr>
+                            <tr>
+                                <td>JavaScript</td>
+                                <td>Beginner</td>
+                            </tr>
+                        </table>
+                    </div>
+
+                    <div>
+                        <hr>
+                        <p style="text-align: center;">
+                            "The journey of a thousand miles begins with one step." - Lao Tzu
+                        </p>
+                    </div>
+                </div>
+
+                <!-- END PAGE CONTENT -->
+            </td>
+        </tr>
+    </table>
 </body>
 </html>
