index first draft, began ab me

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                             <td><a href="index.html">Home</a></td>
                         </tr>
                         <tr>
-                            <td><a href="about/index.html">About Me</a></td>
+                            <td><a href="aboutMe.html">About Me</a></td>
                         </tr>
                         <tr>
                             <td><a href="contact/index.html">Contact</a></td>
