ab draft, began contact

--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
                             <td><a href="aboutMe.html">About Me</a></td>
                         </tr>
                         <tr>
-                            <td><a href="contact/index.html">Contact</a></td>
+                            <td><a href="contactMe.html">Contact</a></td>
                         </tr>
                         <tr>
-                            <td><a href="projects/index.html">Projects</a></td>
+                            <td><a href="myProjects.html">Projects</a></td>
                         </tr>
                         <tr>
-                            <td><a href="gallery/index.html">Gallery</a></td>
+                            <td><a href="gallery.html">Gallery</a></td>
                         </tr>
                     </table>
                     <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
@@ -42,7 +42,7 @@
                 </nav>
             </td>
             <!--Main Body -->
-            <td width="90%" bgcolor="skyblue">
+            <td width="90%" bgcolor="lightblue">
                 <center>
                 <header>
                     <h1>Welcome to the Personal Website of Brendan Grady </h1>
