--- a/aboutMe.html
+++ b/aboutMe.html
@@ -25,22 +25,23 @@
                                 <td><a href="aboutMe.html">About Me</a></td>
                             </tr>
                             <tr>
-                                <td><a href="../contact/index.html">Contact</a></td>
+                                <td><a href="contactMe.html">Contact</a></td>
                             </tr>
                             <tr>
-                                <td><a href="../projects/index.html">Projects</a></td>
+                                <td><a href="myProjects.html">Projects</a></td>
                             </tr>
                             <tr>
-                                <td><a href="../gallery/index.html">Gallery</a></td>
+                                <td><a href="gallery.html">Gallery</a></td>
                             </tr>
                         </table>
-                        <br><br><br><br><br><br><br><br><br>
-                        <br><br><br><br><br><br><br><br><br>
+                        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+                        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+                        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
                     </center>
                 </nav>
             </td>
             <!-- Main Body -->
-            <td width="90%" bgcolor="skyblue">
+            <td width="90%" bgcolor="lightblue">
                 <center>
                     <header>
                         <h1>About Myself</h1>
@@ -49,29 +50,39 @@
                     <!-- Page Content -->
                     <div id="main">
                         <header>
-                            <h2>Hello, I'm Brendan</h2>
-                            <p>Welcome to my "About Me" page. Explore more about my background, interests, and skills.</p>
+                            <h2>Get to Know Me</h2>
+                            <p>Explore more about my background, interests, and skills.</p>
                         </header>
 
                         <h1>
-                            <img src="aboutMeMyImage.jpeg" alt="A picture of Brendan Grady" width="200">
+                            <table border="0" cellpadding="3" bgcolor="burlywood">
+                                <tr>
+                                    <td>
+                                        <img src="aboutMeMyImage.jpeg" alt="A picture of Brendan Grady" width="300">
+                                    </td>
+                                </tr>
+                            </table>
+                            
                         </h1>
 
-                        <br><br><br>
+                        <br><br>
 
                         <div>
                             <hr>
                             <p>
-                                I am a student at the University of Denver, passionate about technology, sports, and creativity. When not in class, I enjoy outdoor activities,
-                                experimenting with photography, and working on web programming projects.
+                                I am currently an undergraduate student at the University of Denver, pursuing a B.S. in Computer Science set to graduate in 2026.
+                                I am also minoring in Mathematics and Business Administration.
+                                <br><br>
+                                I am originally from Holden, Massachusetts, where I went to Wachusett High School, and have been living in Colorado for the past few years for school. 
+                                I am a big fan of Boston sports, which has been pretty nice in my lifetime.
                             </p>
                             <hr>
                         </div>
                         <br><br><br>
 
-                        <table border="2" width="50%" cellpadding="10" bgcolor="silver">
+                        <table border="2" width="50%" cellpadding="10" bgcolor="lightcyan">
                             <tr>
-                                <td>
+                                <td  bgcolor="burlywood">
                                     <center>
                                         <h3>My Hobbies and Interests</h3>
                                     </center>
@@ -80,11 +91,11 @@
                             <tr>
                                 <td>
                                     <ul>
-                                        <li>Football enthusiast</li><br>
-                                        <li>Exploring technology</li><br>
-                                        <li>Hiking and nature</li><br>
-                                        <li>Science fiction and fantasy books</li><br>
-                                        <li>Photography</li><br>
+                                        <li>Skiing</li><br>
+                                        <li>Running</li><br>
+                                        <li>Watching Movies</li><br>
+                                        <li>Video Games</li><br>
+                                        <li>Watching My Sports Teams</li><br>
                                     </ul>
                                 </td>
                             </tr>
@@ -92,28 +103,82 @@
 
                         <br><br><br>
 
-                        <table border="2" width="50%" cellpadding="10" bgcolor="silver">
+                        <table border="2" width="50%" cellpadding="3" bgcolor="lightcyan">
                             <tr>
-                                <td>
+                                <th colspan="2" bgcolor="burlywood">
                                     <center>
-                                        <h3>Skills and Proficiency</h3>
+                                        <h2>Favorites</h2>
                                     </center>
+                                </th>
+                            </tr>
+                            <tr>
+                                <td width="50%">
+                                    <h4>Movie</h4>
+                                </td>
+                                <td>
+                                    <h4>Interstellar</h4>
                                 </td>
                             </tr>
                             <tr>
                                 <td>
-                                    <ul>
-                                        <li>HTML: Intermediate</li><br>
-                                        <li>CSS: Beginner</li><br>
-                                        <li>JavaScript: Beginner</li><br>
-                                        <li>Photography: Intermediate</li><br>
-                                    </ul>
+                                    <h4>Artist</h4>
+                                </td>
+                                <td>
+                                    <h4>Noah Kahan</h4>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <h4>Book</h4>
+                                </td>
+                                <td>
+                                    <h4>Dune</h4>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <h4>Fruit</h4>
+                                </td>
+                                <td>
+                                    <h4>Honeycrisp Apple</h4>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <h4>Video Game</h4>
+                                </td>
+                                <td>
+                                    <h4>Halo 3</h4>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <h4>Sport</h4>
+                                </td>
+                                <td>
+                                    <h4>Football</h4>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <h4>Tree</h4>
+                                </td>
+                                <td>
+                                    <h4>Oak</h4>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <h4>Coding Language</h4>
+                                </td>
+                                <td>
+                                    <h4>Java</h4>
                                 </td>
                             </tr>
                         </table>
                     </div>
 
-                    <br><br><br>
+                    <br><br><br><br>
 
                     <a href="#top">Back to Top</a>
 
