retry about commit

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -1,23 +1,25 @@
-<!-- about.html -->
+<!-- aboutMe.html -->
 
 <!DOCTYPE html>
 <html>
 <title>Brendan Grady - About Me</title>
 
 <head>
-<meta charset="UTF-8">
+    <meta charset="UTF-8">
+    <!-- Meta description --> 
     <meta name="description" content="About Brendan Grady: Learn more about his skills, hobbies, and journey.">
     <title>About Me - My Personal Website</title>
 </head>
 <body>
-    <!-- Menu Bar -->
-    <table border="1" width="100%" cellpadding="10">
+    <table border="0" width="100%" cellpadding="10">
         <tr>
+            <!-- Navigation Sidebar -->
             <td width="10%" bgcolor="#d3d3d3">
                 <nav>
                     <center>
                         <h3>Navigation</h3>
-                        <table border="1" cellpadding="20" bgcolor="#f0f8ff">
+                        <table border="4" cellpadding="20" bgcolor="#f0f8ff">
+                            <!-- Navigation Links -->
                             <tr>
                                 <td><a href="index.html">Home</a></td>
                             </tr>
@@ -34,31 +36,41 @@
                                 <td><a href="gallery.html">Gallery</a></td>
                             </tr>
                         </table>
+                        <!-- Extra spacing for balanced design -->
                         <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
                         <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
                         <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+                        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+                        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+                        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
                     </center>
                 </nav>
             </td>
-            <!-- Main Body -->
+            <!-- Main Content -->
             <td width="90%" bgcolor="lightblue">
                 <center>
-                    <header>
-                        <h1>About Myself</h1>
-                    </header>
+                    <!-- Page Header -->
+                    <table border="10" width="100%" cellpadding="1" bgcolor="burlywood">
+                        <tr>
+                            <td>
+                                <center>
+                                <header>
+                                    <h1><strong>Get to Know Me </strong><br> </h1>
+                                    <p><strong>Explore more about my background, interests, and skills.</strong><br></p>
+                                </header>
+                                </center>
+                            </td>
+                        </tr>
+                    </table>
 
-                    <!-- Page Content -->
-                    <div id="main">
-                        <header>
-                            <h2>Get to Know Me</h2>
-                            <p>Explore more about my background, interests, and skills.</p>
-                        </header>
-
+                    <!-- Introduction Section -->
+                    <div id="main">   
                         <h1>
+                            <!-- Profile Image Section -->
                             <table border="0" cellpadding="3" bgcolor="burlywood">
                                 <tr>
                                     <td>
-                                        <img src="aboutMeMyImage.jpeg" alt="A picture of Brendan Grady" width="300">
+                                        <img src="aboutMePhotos/aboutMeMyImage.jpeg" alt="A picture of Brendan Grady" width="300">
                                     </td>
                                 </tr>
                             </table>
@@ -69,17 +81,22 @@
 
                         <div>
                             <hr>
+                            <!-- Background Information Section -->
                             <p>
-                                I am currently an undergraduate student at the University of Denver, pursuing a B.S. in Computer Science set to graduate in 2026.
-                                I am also minoring in Mathematics and Business Administration.
+                                I am currently an undergraduate student at the University of Denver, pursuing a B.S. in Computer Science as well
+                                 as minors in Mathematics and Business Administration. I have taken classes in Object Oriented Programming, Data Structures,
+                                 Web Programming, Computer Systems, and Discrete Mathematics. I am proficient in Java, Python, and HTML/CSS.
                                 <br><br>
-                                I am originally from Holden, Massachusetts, where I went to Wachusett High School, and have been living in Colorado for the past few years for school. 
-                                I am a big fan of Boston sports, which has been pretty nice in my lifetime.
+                                I am originally from Holden, Massachusetts and have been living in Colorado for the past few years for school. 
+                                I am a big fan of Boston sports, which have been pretty nice in my lifetime. 
+                                Last Fall, I studied abroad in Cork, Ireland, and was able to travel all over Europe.
+                                At the University of Denver, I am treasurer of the Club Kayaking Team. Back home in Massachusetts, I have a yellow lab named Penny.
                             </p>
                             <hr>
                         </div>
                         <br><br><br>
 
+                        <!-- Hobbies Section -->
                         <table border="2" width="50%" cellpadding="10" bgcolor="lightcyan">
                             <tr>
                                 <td  bgcolor="burlywood">
@@ -93,7 +110,7 @@
                                     <ul>
                                         <li>Skiing</li><br>
                                         <li>Running</li><br>
-                                        <li>Watching Movies</li><br>
+                                        <li> Movies</li><br>
                                         <li>Video Games</li><br>
                                         <li>Watching My Sports Teams</li><br>
                                     </ul>
@@ -103,6 +120,7 @@
 
                         <br><br><br>
 
+                        <!-- Favorites Section -->
                         <table border="2" width="50%" cellpadding="3" bgcolor="lightcyan">
                             <tr>
                                 <th colspan="2" bgcolor="burlywood">
@@ -112,74 +130,43 @@
                                 </th>
                             </tr>
                             <tr>
-                                <td width="50%">
-                                    <h4>Movie</h4>
-                                </td>
-                                <td>
-                                    <h4>Interstellar</h4>
-                                </td>
+                                <td width="50%"><h4>Movie</h4></td>
+                                <td><h4>Interstellar</h4> </td>
                             </tr>
                             <tr>
-                                <td>
-                                    <h4>Artist</h4>
-                                </td>
-                                <td>
-                                    <h4>Noah Kahan</h4>
-                                </td>
+                                <td><h4>Artist</h4></td>
+                                <td><h4>Noah Kahan</h4></td>
                             </tr>
                             <tr>
-                                <td>
-                                    <h4>Book</h4>
-                                </td>
-                                <td>
-                                    <h4>Dune</h4>
-                                </td>
+                                <td><h4>Book</h4></td>
+                                <td><h4>Dune</h4></td>
                             </tr>
                             <tr>
-                                <td>
-                                    <h4>Fruit</h4>
-                                </td>
-                                <td>
-                                    <h4>Honeycrisp Apple</h4>
-                                </td>
+                                <td><h4>Fruit</h4></td>
+                                <td><h4>Honeycrisp Apple</h4></td>
                             </tr>
                             <tr>
-                                <td>
-                                    <h4>Video Game</h4>
-                                </td>
-                                <td>
-                                    <h4>Halo 3</h4>
-                                </td>
+                                <td> <h4>Video Game</h4> </td>
+                                <td> <h4>Halo 3</h4></td>
                             </tr>
                             <tr>
-                                <td>
-                                    <h4>Sport</h4>
-                                </td>
-                                <td>
-                                    <h4>Football</h4>
-                                </td>
+                                <td><h4>Sport</h4></td>
+                                <td> <h4>Football</h4></td>
                             </tr>
                             <tr>
-                                <td>
-                                    <h4>Tree</h4>
-                                </td>
-                                <td>
-                                    <h4>Oak</h4>
-                                </td>
+                                <td><h4>Tree</h4></td>
+                                <td><h4>Oak</h4></td>
                             </tr>
                             <tr>
-                                <td>
-                                    <h4>Coding Language</h4>
-                                </td>
-                                <td>
-                                    <h4>Java</h4>
-                                </td>
+                                <td><h4>Coding Language</h4></td>
+                                <td><h4>Java</h4></td>
                             </tr>
                         </table>
                     </div>
 
                     <br><br><br><br>
 
+                    <!-- Back to Top Link -->
                     <a href="#top">Back to Top</a>
 
                 </center>
